--- a/IdeaBank.Web/IdeaBank.Web.csproj
+++ b/IdeaBank.Web/IdeaBank.Web.csproj
@@ -14,4 +14,8 @@
         </PackageReference>
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\IdeaBank.Data\IdeaBank.Data.csproj" />
+    </ItemGroup>
+
 </Project>
