Creates all currently needed dtos for all entities

--- a/IdeaBank.Models/IdeaBank.Models.csproj
+++ b/IdeaBank.Models/IdeaBank.Models.csproj
@@ -6,4 +6,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\IdeaBank.Data\IdeaBank.Data.csproj" />
+    </ItemGroup>
+
 </Project>
