--- a/IdeaBank.Data/IdeaBank.Data.csproj
+++ b/IdeaBank.Data/IdeaBank.Data.csproj
@@ -15,4 +15,8 @@
       <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="10.0.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\IdeaBank.Shared\IdeaBank.Shared.csproj" />
+    </ItemGroup>
+
 </Project>
